--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CoverMitra - Premium Covers</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1 class="logo">CoverMitra</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h2>Your Trusted Mobile & Tablet Cover Store</h2>
+        <p>Premium protection. Stylish designs. Affordable prices.</p>
+        <a href="products.html" class="btn">Shop Now</a>
+    </section>
+
+    <footer>
+        <p>© 2025 CoverMitra | All Rights Reserved</p>
+    </footer>
+</body>
+</html>
 
