--- a/products.html
+++ b/products.html
@@ -1,1 +1,140 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Products - CoverMitra</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <header>
+        <h1 class="logo">CoverMitra</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <h2 class="page-title">Our Products</h2>
+
+    <div class="product-container">
+
+        <!-- START PRODUCT TEMPLATE -->
+        <!-- Copy & edit these blocks to add more products later -->
+
+        <div class="product">
+            <img src="images/product1.jpg" alt="Cover">
+            <h3>Premium Phone Cover</h3>
+            <p>Price: ₹199</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=I%20want%20to%20order%20Premium%20Phone%20Cover">
+                Buy on WhatsApp
+            </a>
+        </div>
+
+        <div class="product">
+            <img src="images/product2.jpg" alt="Cover">
+            <h3>Shockproof Phone Cover</h3>
+            <p>Price: ₹249</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=I%20want%20Shockproof%20Cover">
+                Buy on WhatsApp
+            </a>
+        </div>
+
+        <div class="product">
+            <img src="images/product3.jpg" alt="Cover">
+            <h3>Stylish Printed Cover</h3>
+            <p>Price: ₹199</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=I%20want%20Printed%20Cover">
+                Buy on WhatsApp
+            </a>
+        </div>
+
+        <!-- Add up to 12 total -->
+        <!-- I will generate 12, then you add real images later -->
+
+        <!-- PRODUCT 4 -->
+        <div class="product">
+            <img src="images/product4.jpg">
+            <h3>Matte Finish Cover</h3>
+            <p>Price: ₹179</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=Matte%20Finish%20Cover">Buy on WhatsApp</a>
+        </div>
+
+        <!-- PRODUCT 5 -->
+        <div class="product">
+            <img src="images/product5.jpg">
+            <h3>Transparent Cover</h3>
+            <p>Price: ₹149</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=Transparent%20Cover">Buy on WhatsApp</a>
+        </div>
+
+        <!-- PRODUCT 6 -->
+        <div class="product">
+            <img src="images/product6.jpg">
+            <h3>Soft Silicone Case</h3>
+            <p>Price: ₹159</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=Soft%20Silicone%20Case">Buy on WhatsApp</a>
+        </div>
+
+        <!-- PRODUCT 7 -->
+        <div class="product">
+            <img src="images/product7.jpg">
+            <h3>Rugged Phone Cover</h3>
+            <p>Price: ₹249</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=Rugged%20Cover">Buy on WhatsApp</a>
+        </div>
+
+        <!-- PRODUCT 8 -->
+        <div class="product">
+            <img src="images/product8.jpg">
+            <h3>Camera Protection Cover</h3>
+            <p>Price: ₹229</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=Camera%20Protection%20Cover">Buy on WhatsApp</a>
+        </div>
+
+        <!-- PRODUCT 9 -->
+        <div class="product">
+            <img src="images/product9.jpg">
+            <h3>Glossy Stylish Cover</h3>
+            <p>Price: ₹199</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=Glossy%20Cover">Buy on WhatsApp</a>
+        </div>
+
+        <!-- PRODUCT 10 -->
+        <div class="product">
+            <img src="images/product10.jpg">
+            <h3>iPad Smart Cover</h3>
+            <p>Price: ₹399</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=iPad%20Smart%20Cover">Buy on WhatsApp</a>
+        </div>
+
+        <!-- PRODUCT 11 -->
+        <div class="product">
+            <img src="images/product11.jpg">
+            <h3>Tablet Hard Case</h3>
+            <p>Price: ₹349</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=Tablet%20Hard%20Case">Buy on WhatsApp</a>
+        </div>
+
+        <!-- PRODUCT 12 -->
+        <div class="product">
+            <img src="images/product12.jpg">
+            <h3>iPad Shockproof Cover</h3>
+            <p>Price: ₹449</p>
+            <a class="buy-btn" href="https://wa.me/918239320278?text=iPad%20Shockproof%20Cover">Buy on WhatsApp</a>
+        </div>
+
+    </div>
+
+    <footer>
+        <p>© 2025 CoverMitra | All Rights Reserved</p>
+    </footer>
+
+</body>
+
+</html>
 
