--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoverMitra - Premium Covers</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <header>
         <h1 class="logo">CoverMitra</h1>
         <nav>
@@ -22,9 +25,28 @@
         <a href="products.html" class="btn">Shop Now</a>
     </section>
 
+    <section class="features">
+        <div class="feature-box">
+            <h3>Premium Quality</h3>
+            <p>Strong & durable covers for all devices.</p>
+        </div>
+
+        <div class="feature-box">
+            <h3>Fast Delivery</h3>
+            <p>Pan India shipping at low cost.</p>
+        </div>
+
+        <div class="feature-box">
+            <h3>WhatsApp Support</h3>
+            <p>Order & chat instantly on WhatsApp.</p>
+        </div>
+    </section>
+
     <footer>
         <p>© 2025 CoverMitra | All Rights Reserved</p>
     </footer>
+
 </body>
+
 </html>
 
