--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - CoverMitra</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1 class="logo">CoverMitra</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <section class="contact">
+        <h2>Contact Us</h2>
+        <p>WhatsApp: <a href="https://wa.me/918239320278" target="_blank">+91 8239320278</a></p>
+        <p>Email: support@covermitra.com</p>
+        <p>Instagram: <a href="https://instagram.com/covermitra" target="_blank">@covermitra</a></p>
+    </section>
+
+    <footer>
+        <p>© 2025 CoverMitra | All Rights Reserved</p>
+    </footer>
+</body>
+</html>
 
